Show meal cards

--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -1,6 +1,23 @@
 <%- include('partials/header') %>
 
-<h1>Calendar</h1>
+<div class="container">
+  <h1 class="my-3">Calendar</h1>
+</div>
+<div class="container-fluid">
+  <div class="d-flex flex-wrap">
+    <% meals.forEach((meal, i) => { %>
+      <div class="card calendar-card my-3 pt-1 <%= i % 2 === 0 ? 'bg-light' : 'bg-white' %>">
+        <% if (meal.link) { %>
+          <a href="<%= meal.link%>"><h5><%= meal.name %></h5></a>
+        <% } else {%>
+          <h5><%= meal.name %></h5>
+        <% }%>
+
+      </div>
+    <% }) %>
+  </div>
+</div>
+
 
 <%- include('partials/bootstrap_footer') %>
 <%- include('partials/footer') %>
