--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,3 +8,11 @@ body {
   min-height: 10em;
   text-align: center;
 }
+
+.account-checkbox {
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+}
