--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     </div>
     <form action="/calendar" method="POST">
       <h3>Enter the meals you want included</h3>
-      <p>You can also choose how many times you want them repeated</p>
+      <p>You can also choose how many times you want them repeated - useful for leftovers ¯\_(ツ)_/¯</p>
       <hr>
       <div id="meal-container">
         <% for(let i = 0; i < 5; i++) { %>
