--- a/views/index_favorites.ejs
+++ b/views/index_favorites.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header') %>
+<%- include('partials/navbar') %>
 
   <div class="container">
     <div class="jumbotron mt-4 py-4">
