Fix input sizing

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,8 +17,8 @@
             <div class="col-7">
               <input class="form-control" type="text" name="meals[<%= i %>][name]">
             </div>
-            <div class="col">
-              <input class="form-control" type="number" name="meals[<%= i %>][quantity]" value="1">
+            <div class="col-2 index_repeat-col">
+              <input class="form-control index_repeat-input" type="number" name="meals[<%= i %>][quantity]" value="1">
             </div>
             <div class="col">
               <button type="button" class="btn btn-danger delete-btn">X</button>
