--- a/views/index_favorites.ejs
+++ b/views/index_favorites.ejs
@@ -19,7 +19,7 @@
               <input type="hidden" name="meals[<%= i %>][link]" value="<%= meal.link ? meal.link : '' %>">
             </div>
             <div class="col">
-              <input class="form-control" type="number" name="meals[<%= i %>][quantity]" value="1">
+              <input class="form-control index_repeat-input" type="number" name="meals[<%= i %>][quantity]" value="1">
             </div>
             <div class="col">
               <button type="button" class="btn btn-danger delete-btn">X</button>
