--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,3 +16,16 @@ body {
   -webkit-transform: scale(2); /* Safari and Chrome */
   -o-transform: scale(2); /* Opera */
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.index_repeat-input {
+  -moz-appearance: textfield;
+  display: inline-block;
+  min-width: 35px !important;
+}
