--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -5,7 +5,7 @@
   <h1 class="my-3">Calendar</h1>
 </div>
 <div class="container-fluid">
-  <div class="d-flex flex-wrap">
+  <div class="d-flex flex-wrap justify-content-around">
     <% meals.forEach((meal, i) => { %>
       <div class="card calendar-card my-3 pt-1 <%= i % 2 === 0 ? 'bg-light' : 'bg-white' %>">
         <% if (meal.link) { %>
